Fixed spacing.

--- a/vusa.io/src/components/about/about.scss
+++ b/vusa.io/src/components/about/about.scss
@@ -1,5 +1,4 @@
 .about{
-  background: inherit;
 
   img {
     max-height: inherit;
