--- a/vusa.io/src/index.scss
+++ b/vusa.io/src/index.scss
@@ -12,13 +12,6 @@ code {
     monospace;
 }
 
-.content-container{
-  height: calc(100vh - 20px);
-  width: 100%;
-  padding: 20px 0;
-  overflow-y: scroll; /* Add the ability to scroll */
-}
-
 /* Hide scrollbar for Chrome, Safari and Opera */
 .content-container::-webkit-scrollbar {
   display: none;
@@ -26,8 +19,14 @@ code {
 
 /* Hide scrollbar for IE, Edge and Firefox */
 .content-container {
--ms-overflow-style: none;  /* IE and Edge */
-scrollbar-width: none;  /* Firefox */
+  height: calc(100vh - 20px);
+  width: 100%;
+  background: white;
+  color: black;
+  padding: 20px 0;
+  overflow-y: scroll; /* Add the ability to scroll */
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
 
 #navbar{
